Fix mobile nav sign out button alignment

--- a/assets/css/partials/_navbar.scss
+++ b/assets/css/partials/_navbar.scss
@@ -46,6 +46,13 @@ a {
 
 .signout-form {
   padding: 0;
+  border: none;
+  box-shadow: none;
+  margin-left: 30px;
+
+  @media (min-width: 768px) {
+    margin-left: 0;
+  }
 }
 
 .spacer {
